<resources>
    <string name="app_name">Invoice Total</string>
    <string name="subtotal_label">Subtotal</string>
    <string name="discount_percent_label">Discount Percentage</string>
    <string name="discount_amount_label">Discount Amount</string>
    <string name="total_label">Total</string>
    <string name="invoice_amount">150</string>
    <string name="total_calc_label">135.00</string>
    <string name="discount_amount_calc_label">$15.00</string>
    <string name="discount_percent_calc_label">10%</string>
</resources>